syntax = "proto3";
package sro.characters;
option go_package = "pkg/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service CharactersService {
  rpc GetGenders(google.protobuf.Empty) returns (Genders) {
    option (google.api.http) = {
      get: "/v1/genders"
    };
  }

  rpc GetRealms(google.protobuf.Empty) returns (Realms) {
    option (google.api.http) = {
      get: "/v1/realms"
    };
  }

  rpc GetCharacters(google.protobuf.Empty) returns (CharactersResponse) {
    option (google.api.http) = {
      get: "/v1/characters"
    };
  }

  rpc GetCharacter(CharacterTarget) returns (CharacterResponse) {
    option (google.api.http) = {
      get: "/v1/characters/{character_id}"
    };
  }

  rpc CreateCharacter(CreateCharacterRequest) returns (CharacterResponse) {
    option (google.api.http) = {
      post: "/v1/users/{user_id}/characters"
      body: "*"
    };
  }

  rpc DeleteCharacter(CharacterTarget) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/characters/{character_id}"
    };
  }

  rpc GetAllCharactersForUser(UserTarget) returns (CharactersResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/characters"
    };
  }

  rpc EditCharacter(EditCharacterRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/characters/{id}"
      body: "*"
    };
  }

  // Adds the given amount of playtime to the character and returns the total playtime
  rpc AddCharacterPlayTime(CharacterTarget) returns (PlayTimeResponse) {
    option (google.api.http) = {
      put: "/v1/characters/{character_id}/playtime"
      body: "*"
    };
  }
}

message PlayTimeResponse {
  uint64 time = 1;
}

message CreateCharacterRequest {
  string user_id = 1;
  string name = 2;
  string gender = 3;
  string realm = 4;
}

message UserTarget {
  string user_id = 1;
}

message CharacterTarget {
  uint64 character_id = 1;
}

message EditCharacterRequest {
  uint64 id = 1;

  // The user account that owns the character
  google.protobuf.StringValue owner_id = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue gender = 4;
  google.protobuf.StringValue realm = 5;

  // Total play time in minutes
  google.protobuf.UInt64Value play_time = 7;

  Location location = 8;
}


message CharacterResponse {
  uint64 id = 1;
  string owner = 2;
  string name = 3;
  string gender = 4;
  string realm = 5;
  uint64 play_time = 6;
  Location location = 8;
}

message Location {
  string world = 1;
  float x = 2;
  float y = 3;
  float z = 4;
}

message CharactersResponse {
  repeated CharacterResponse characters = 1;
}

message Gender {
  string name = 1;
}

message Realm {
  string name = 1;
}

message Genders {
  repeated Gender genders = 1;
}

message Realms {
  repeated Realm realms = 1;
}
